--- a/app/src/main/res/layout/activity_add_time_records.xml
+++ b/app/src/main/res/layout/activity_add_time_records.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".AddTimeRecordsActivity">
 
     <TextView
         android:id="@+id/add_time_text"
@@ -77,12 +78,22 @@
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/add_time_CreateRecordBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
-        android:text="Button"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="50dp"
+        android:text="Create Record"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_time_DistanceInput" />
+
+    <Button
+        android:id="@+id/add_time_CancelBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="100dp"
+        android:text="Cancel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/add_time_DistanceInput" />
 </androidx.constraintlayout.widget.ConstraintLayout>
