--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activity.Basics.HomeActivity">
+    tools:context=".activity.basics.HomeActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_RecycleView"
